spade-tests/src/snapshots/spade_tests__parser__expected_expression.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let abc = ;
    abc
}


error: Unexpected `;`, expected expression
  ┌─ testinput:2:15
  │
2 │     let abc = ;
  │               ^ expected expression here


